# master/docs/swagger.json
@@ -774,11 +774,11 @@
                 "name": {
                     "type": "string"
                 },
-                "next_start": {
-                    "type": "string"
-                },
                 "repeat": {
                     "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/models.TaskStatus"
                 },
                 "to": {
                     "$ref": "#/definitions/models.Star"
@@ -809,6 +809,17 @@
                     "type": "integer"
                 }
             }
+        },
+        "models.TaskStatus": {
+            "type": "integer",
+            "enum": [
+                1,
+                0
+            ],
+            "x-enum-varnames": [
+                "TaskStatusRunning",
+                "TaskStatusStop"
+            ]
         },
         "models.User": {
             "type": "object",
